--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
-*{
+ *{
   margin: 0;
   box-sizing: border-box;
 }
 
-.contenedor{
-  width: 400px; 
-  margin: 0 auto;
+.container {
+  position: relative;
 }
-.bandera{
-  margin: 80px;
-  width: 70px;
-  height: 150px;
-  background-color: #EF3349;
-  box-shadow: 70px 0 #FDDA25, 140px 0 #EF3349;
-  filter: drop-shadow(0 0 1px);
+.bandera {
+  display: grid;
+  grid-template-columns: 500px;
+  grid-template-rows: 70px 140px 70px;
+  margin: 50px 400px;
 }
-h1{
+
+.rojo1 {
+  background-color: red;
+}
+
+.amarillo {
+  background-color: yellow;
+}
+
+.rojo2 {
+  background-color: red;
+}
+
+h1 {
   display: inline-block;
   text-align: center;
-  margin: 100px 100px -30px 120px;
+  margin: 100px 100px 30px 590px;
 }
